...
    let saveDetails: ((_ details: ContactDetails) -> Promise<SavedContactDetails>)
    let title: String
    
    init(contactDetails: SavedContactDetails, usecase: ContactDetailUsecaseProtocol) {
        self.contactDetails = contactDetails.details
        self.saveDetails = contactDetails.id |> String.init |> usecase.addOrUpdateContactDetail(forID:)
        self.title = "Edit Details"
    }
    
    init(usecase: ContactDetailUsecaseProtocol) {
        self.saveDetails = usecase.addOrUpdateContactDetail(forID: nil)
        self.title = "Add Details"
    }
    
    func saveContactDetails() -> Promise<String> {
       return (contactDetails |> validate(contactDetail:))
        .flatMap {[weak self] detail -> Promise<SavedContactDetails>? in
            guard let self = self else {
...
